[CMakeLists.txt] INCLUDE_DIRECTORIES 수정

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ FIND_PACKAGE(OpenVINO REQUIRED Runtime Threading)
 IF(OpenVINO_FOUND)
     MESSAGE(STATUS "    Find OpenVINO ${OpenVINO_VERSION_MAJOR}.${OpenVINO_VERSION_MINOR}.${OpenVINO_VERSION_PATCH}")
     MESSAGE(STATUS "    OpenVINO_DIR : " ${OpenVINO_DIR})
-    LIST(APPEND INCLUDE_DIRECTORIES "${OpenVINO_DIR}/../include/openvino")
+    LIST(APPEND INCLUDE_DIRECTORIES "${OpenVINO_DIR}/../include/")
     MESSAGE(STATUS "        INCLUDE    : " ${INCLUDE_DIRECTORIES})
     LIST(APPEND DEPENDENCIES openvino::runtime openvino::threading)
     MESSAGE(STATUS "        LIBRARIES  : " ${DEPENDENCIES})
